--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -86,6 +86,7 @@
   color: #fff;
   border: none;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .inputMargins {
@@ -241,6 +242,7 @@
   border: none;
   font-size: 18px;
   font-weight: 600;
+  border-radius: 7px;
 }
 
 .gridFooter {
